# klaytn-price-oracle

./: README.md
client/: .env.sample  config-overrides.js  config.js  package-lock.json  package.json
client/src/: App.jsx  App.scss  index.js  router.jsx
client/src/components/: BlockNumber.jsx  BlockNumber.scss  Count.scss  PriceOracle.jsx
client/src/contracts/: Count.json  Migrations.json
client/src/hooks/: useKaikas.js
client/src/klaytn/: caver.js
klaytn-price-oracle/: .env.sample  .gitignore  package.json  redis-subscribe-and-set-price-to-contract.js  test-get-price.js  test-set-price.js  truffle-config.js
klaytn-price-oracle/contracts/: PriceOracle.sol
klaytn-price-oracle/migrations/: 2_deploy_contracts.js
services/price_getter/: pyproject.toml  ticker.py
